transaction module and setup docker
