# src/domain/transactions/dto/update-transactions.dto.ts
@@ -1,0 +1,3 @@
+import { CreateTransactionsDto } from './create-transactions.dto';
+
+export class UpdateTransactionsDto extends CreateTransactionsDto {}
